refactor: Changes for compatibility with Java version 11.